# total-recall

./: .gitignore  Cargo.toml  LICENSE  README.md
migrations/2020-04-18-073432_init/: down.sql  up.sql
src/: lib.rs  main.rs
src/db/: mod.rs  schema.rs
src/graphql/: mod.rs  query.rs
src/graphql/mutations/: card.rs  deck.rs  mod.rs  score.rs  set.rs  user.rs  utilities.rs
src/service/: endpoints.rs  jwt.rs  mod.rs
src/test/: card.rs  deck.rs  mod.rs  score.rs  set.rs  user.rs
